src/test/ui/regions/regions-name-undeclared.stderr
error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/regions-name-undeclared.rs:15:24
   |
LL |     fn m4(&self, arg: &'b isize) { }
   |                        ^^ undeclared lifetime
   |
help: consider introducing lifetime `'b` here
   |
LL | impl<'b, 'a> Foo<'a> {
   |      ^^^
help: consider introducing lifetime `'b` here
   |
LL |     fn m4<'b>(&self, arg: &'b isize) { }
   |          ^^^^

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/regions-name-undeclared.rs:16:12
   |
LL |     fn m5(&'b self) { }
   |            ^^ undeclared lifetime
   |
help: consider introducing lifetime `'b` here
   |
LL | impl<'b, 'a> Foo<'a> {
   |      ^^^
help: consider introducing lifetime `'b` here
   |
LL |     fn m5<'b>(&'b self) { }
   |          ^^^^

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/regions-name-undeclared.rs:17:27
   |
LL |     fn m6(&self, arg: Foo<'b>) { }
   |                           ^^ undeclared lifetime
   |
help: consider introducing lifetime `'b` here
   |
LL | impl<'b, 'a> Foo<'a> {
   |      ^^^
help: consider introducing lifetime `'b` here
   |
LL |     fn m6<'b>(&self, arg: Foo<'b>) { }
   |          ^^^^

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-name-undeclared.rs:25:22
   |
LL |     type X = Option<&'a isize>;
   |           -          ^^ undeclared lifetime
   |           |
   |           help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-name-undeclared.rs:27:13
   |
LL |     enum E {
   |           - help: consider introducing lifetime `'a` here: `<'a>`
LL |         E1(&'a isize)
   |             ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-name-undeclared.rs:30:13
   |
LL |     struct S {
   |             - help: consider introducing lifetime `'a` here: `<'a>`
LL |         f: &'a isize
   |             ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-name-undeclared.rs:32:14
   |
LL |     fn f(a: &'a isize) { }
   |         -    ^^ undeclared lifetime
   |         |
   |         help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-name-undeclared.rs:40:17
   |
LL | fn fn_types(a: &'a isize,
   |            -    ^^ undeclared lifetime
   |            |
   |            help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/regions-name-undeclared.rs:42:36
   |
LL | ...                   &'b isize,
   |                        ^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider introducing lifetime `'b` here
   |
LL | fn fn_types<'b>(a: &'a isize,
   |            ^^^^
help: consider making the bound lifetime-generic with a new `'b` lifetime
   |
LL |             b: Box<dyn for<'a, 'b> FnOnce(&'a isize,
   |                              ^^^^

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/regions-name-undeclared.rs:45:36
   |
LL | ...                   &'b isize)>,
   |                        ^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider introducing lifetime `'b` here
   |
LL | fn fn_types<'b>(a: &'a isize,
   |            ^^^^
help: consider making the bound lifetime-generic with a new `'b` lifetime
   |
LL |             b: Box<dyn for<'a, 'b> FnOnce(&'a isize,
   |                              ^^^^

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-name-undeclared.rs:46:17
   |
LL | fn fn_types(a: &'a isize,
   |            - help: consider introducing lifetime `'a` here: `<'a>`
...
LL |             c: &'a isize)
   |                 ^^ undeclared lifetime

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0261`.
